# lockbook

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CNAME  Cargo.toml  Makefile  analysis_options.yaml  android-search-jni-integration-plan.md  android-touch.patch  benchmark.py  check_models.py  completions.sh  create_matching_model.py  create_test_model.py  debug_onnx.py  diagnose.py  docker-compose.yml  download_cross_encoder.py  download_e5_model.py  download_real_cross_encoder.py  dump.rdb  index.html  index.xml  lbdev.fish  lorem_ipsum.md  pubspec.yaml  rustfmt.toml  sitemap.xml  styles.css  test  test_search_system.py  website.draw
clients/admin/: Cargo.toml
clients/admin/src/: account.rs  disappear.rs  error.rs  indexes.rs  info.rs  main.rs  validate.rs
clients/cli/: Cargo.toml  code  comp.fish  download_model_burn.py
clients/cli-x/: Cargo.toml
clients/cli-x/src/: list.rs  main.rs
clients/cli/src/: account.rs  add_billing.rs  admin.rs  backup.rs  billing.rs  calculate_usage.rs  completions.rs  copy.rs  debug.rs  drawing.rs  edit.rs  error.rs  export.rs  export_drawing.rs  export_private_key.rs  imex.rs  import.rs  import_private_key.rs  init.rs  input.rs  lb_fs.rs  list.rs  main.rs  migrate.rs  ml_chat.rs  ml_init.rs  move_file.rs  mv.rs  new.rs  new_account.rs  print.rs  print_tree.rs  private_key.rs  remove.rs  rename.rs  search.rs  selector.rs  share.rs  status.rs  stream.rs  (+7 more)
clients/desktop/: Cargo.toml
clients/desktop/src/: lib.rs  main.rs
clients/drive/: .gitignore  Cargo.toml  example.txt
clients/drive/siddhant/: abcd.md  notes.md  temp.md  welcome.md
clients/drive/src/: core.rs  event.rs  fs_impl.rs  import.rs  lib.rs  local_sync.rs  logger.rs  main.rs
clients/drive/tests/: path_tests.rs  scenarios.rs
clients/egui/: Cargo.toml  build.rs
clients/egui/src/: custom3d_wgpu_shader.wgsl  lb_wgpu.rs  lib.rs  main.rs  model.rs  onboard.rs  settings.rs  splash.rs  theme.rs  util.rs
clients/linux/: Cargo.toml  custom.lang  default.nix  style.css
clients/linux/lb-api/: Cargo.toml
clients/linux/res/: app.css  custom.lang  lockbook-onboarding-pixdata  lockbook-pixdata  lockbook-window-icon-pixdata
clients/linux/src/: account.rs  app.rs  auto_save.rs  auto_sync.rs  backend.rs  background_work.rs  bg.rs  editmode.rs  error.rs  filetree.rs  gui.rs  intro.rs  lbsearch.rs  lbutil.rs  lib.rs  main.rs  menubar.rs  messages.rs  onboarding.rs  screens.rs  settings.rs  syncing.rs  util.rs  window.rs
clients/windows/: .editorconfig  .gitignore  App.xaml  App.xaml.cs  Cargo.toml  Core.cs  CoreModel.cs  FileExplorer.xaml  FileExplorer.xaml.cs  Home.xaml  Home.xaml.cs  Package.appxmanifest  SignUp.xaml  SignUp.xaml.cs  build.rs  lockbook.sln  windows.csproj  windows.sln
clients/windows/Properties/: AssemblyInfo.cs
clients/windows/core/: Core.cs  (+5 more)
core/: Cargo.toml  Makefile  Xargo.toml  build_for_android.sh  build_for_xcode.sh  ios_build.sh  lockbook_core.h  mac_build.sh  run_tests.sh  x86_64-apple-ios-macabi.json
core/benches/: bench_main.rs  benchmarks.rs  create_file_benchmark.rs  open_app_benchmark.rs  performator.rs  sync_benchmark.rs  throughput.rs  write_benchmark.rs
core/src/: account.rs  account_api.rs  account_repo.rs  account_service.rs  android.rs  auth_service.rs  c_interface.rs  client.rs  clock.rs  crypto.rs  db_provider.rs  error_enum.rs  file_metadata.rs  file_metadata_repo.rs  file_metadata_service.rs  java_interface.rs  json_interface.rs  lib.rs  lib_helpers.rs  loggers.rs  schema.rs  state.rs  utils.rs
core/tests/: account_service_tests.rs  admin_tests.rs  api_auth_tests.rs  api_billing_tests.rs  api_change_document_content_tests.rs  api_create_file_tests.rs  api_delete_file_tests.rs  api_get_document_tests.rs  api_get_subscription_info_tests.rs  api_move_file_tests.rs  api_new_account_tests.rs  api_rename_file_tests.rs  api_service_tests.rs  auth_tests.rs  billing_tests.rs  cancel_subscription_test.rs  case_insensitive_username.rs  change_document_content_tests.rs  change_file_content.rs  create_account_tests.rs  create_document_tests.rs  create_file.rs  create_file_tests.rs  db_state_service_tests.rs  delete_and_list_tests.rs  delete_document_tests.rs  delete_file.rs  delete_file_tests.rs  document_tests.rs  drawing_tests.rs  exhaustive_sync_check.rs  file_compression_tests.rs  file_encryption_tests.rs  file_ops.rs  file_service_tests.rs  files_tests.rs  get_credit_card_test.rs  get_document_tests.rs  get_last_registered_credit_card_test.rs  get_public_key.rs  (+52 more)
libs/core/: .gitignore  Cargo.toml  Makefile
libs/core_external_interface/: Cargo.toml  Makefile
libs/lb-bifs/: Cargo.toml
libs/lb-fs/: Cargo.toml
libs/lb-sync-dir/: Cargo.toml
lockbook_core/: Cargo.toml  ios_build.sh  lockbook_core.h  run_tests.sh
lockbook_core/src/: account.rs  account_api.rs  account_repo.rs  account_service.rs  crypto.rs  db_provider.rs  encryption.rs  lib.rs  schema.rs  state.rs
models/: Cargo.toml
models/cross-encoder-ms-marco-MiniLM-L-6-v2/: config.json  model.onnx
models/e5-base-v2/: model.onnx
models/src/: api.rs  crypto.rs  file_metadata.rs  lib.rs  local_changes.rs
public-site/trunk/: Cargo.toml  Trunk.toml  base.html  tailwind.config.js  tailwind.css
server/: .gitignore  Cargo.toml  Cross.toml  README.md  deploy.sh  local.env  s3_policy.txt  server_log.txt
server/admin/: Cargo.toml
server/index_db/: create_db.sql
server/server/: Cargo.toml  dump.rdb  run-server  server_log.txt  sqlx-data.json
server/src/: account_dbs.rs  account_service.rs  api.rs  config.rs  debug_info.rs  defense.rs  document_service.rs  endpoint.rs  error_handler.rs  external_link.rs  file_content_client.rs  file_index_repo.rs  file_service.rs  files.rs  files_db.rs  garbage_worker.rs  index_db.rs  lib.rs  loggers.rs  main.rs  metrics.rs  router_service.rs  schema.rs  server.rs  server_tree.rs  static_files.rs  usage.rs  usage_service.rs  utils.rs
server/templates/: redirect.html
utils/dev-tool/: Cargo.toml
utils/lbdev/: Cargo.toml
utils/metrics/: Cargo.toml
utils/releaser/: Cargo.toml
utils/test_utils/: Cargo.toml
(+3297 files in other folders)
