[workspace]

resolver="2"

members = [
	"libs/lb/lb-rs",
	"libs/lb/lb-rs/libs/test_utils",
	"libs/lb/c_interface_v2",
	"libs/lb/lb_external_interface",
	"libs/content/editor/egui_editor",
	"libs/content/workspace",
	"libs/content/workspace-ffi",
	"libs/lb-fs",
	"server/server",
	"clients/cli",
	"clients/egui",
	"clients/linux",
	"clients/windows",
	"clients/admin",
	"utils/dev-tool",
	"utils/releaser",
	"utils/winstaller",
]
