[workspace]

resolver = "2"

members = [
    "libs/lb/lb-rs",
    "libs/lb/test_utils",
    "libs/content/workspace",
    "libs/content/workspace-ffi",
    "libs/lb-fs",
    "server",
    "clients/cli",
    "clients/egui",
    "clients/linux",
    "clients/windows",
    "clients/admin",
    "utils/lbdev",
    "utils/releaser",
    "utils/winstaller",
    "libs/lb/lb-c",
    "libs/lb/lb-java",
]

# restore for big binaries but good backtraces
# [profile.release]
# debug = true
# [profile.bench]
# debug = true
