[package]
name = "lockbook-core"
version = "0.1.3"
authors = ["Parth <parth@mehrotra.me>", "Raayan <raayan@raayanpillai.com>", "Travis <t.vanderstad@gmail.com>", "Smail <smailbarkouch1@gmail.com>"]
edition = "2018"
description = "The functional components of the iOS and Android lockbook clients."
license = "BSD-3-Clause"

[lib]
name = "lockbook_core"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
aead = "0.2.0"
aes-gcm = "0.5.0"
base64 = "0.11.0"
basic-human-duration = "0.1.2"
bincode = "1.2.1"
chrono = "0.4.15"
diffy = "0.2.0"
fern = { version = "0.6.0", features = ["colored"]}
flate2 = "1.0"
image = "0.23.13" 
jni = { version = "0.13.1", default-features = false }
log = "0.4.8"
rand = "0.7"
raqote = { version = "0.8.0", default-features = false }
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
rsa = { version = "^0.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_bytes = "0.11.5"
sha2 = "0.8.0"
sled = "0.34.3"
strum = "0.19.5"
strum_macros = "0.19.4"
tempfile = { version = "3.1.0" }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3.3"
cpuprofiler = "0.0.4"

[[bench]]
name = "performator"
harness = false

[[bench]]
name = "throughput"
harness = false
