[package]
name = "lockbook-core"
version = "0.4.3"
edition = "2018"
description = "The functional components of the iOS and Android lockbook clients."
license = "BSD-3-Clause"

[lib]
name = "lockbook_core"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
base64 = "0.11.0"
basic-human-duration = "0.1.2"
bincode = "1.3.3"
chrono = "0.4.15"
diffy = "0.2.0"
flate2 = "1.0"
fuzzy-matcher = "0.3.7"
image = "0.23.13" 
jni = { version = "0.13.1", default-features = false }
rand = "0.8.4"
raqote = { version = "0.8.0", default-features = false }
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
sha2 = "0.8.0"
strum = "0.19.5"
strum_macros = "0.19.4"
tempfile = { version = "3.1.0" }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
itertools = "0.10.1"
backtrace = "0.3"
libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
tracing = "0.1.5"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2"
hmdb = "0.1.12"
lazy_static = "1.4.0"
lockbook-shared = { path = "libs/shared" }

[profile.release]
debug = true

[dev-dependencies]
cpuprofiler = "0.0.4"
criterion = "0.3.5"
indicatif = "0.17.0-beta.1"
libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
variant_count = "1.1.0"
num_cpus = "1.13.0"
test_utils = { path = "libs/test_utils" }

[[bench]]
name = "bench_main"
harness = false
