[package]
name = "lockbook_core"
version = "0.1.0"
authors = ["Parth <parth@mehrotra.me>"]
edition = "2018"

[lib]
name = "lockbook_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
reqwest = "0.9.24"
rusqlite = "0.21.0"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.11.0"
