[package]
name = "lockbook_models"
version = "0.1.0"
authors = ["Raayan Pillai <raayan@raayanpillai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rsa = { version = "^0.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
