[package]
name = "lockbook-server"
version = "0.1.0"
authors = ["Parth <parth@mehrotra.me>"]
edition = "2018"

[dependencies]
base64 = "0.11.0"
chrono = "0.4.15"
env_logger = "0.7.1"
hyper = "0.13.5"
lockbook_core = { path = "../core" }
log = "0.4.8"
openssl = { version = "0.10", features = ["vendored"] }
postgres-openssl = "0.3.0"
rsa = { version = "^0.2", features = ["serde1"] }
rust-s3 = { version = "0.22.3", features = ["path-style"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "0.2.18", features = ["full"] }
tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }