[package]
version = "0.9.7"
name = "lockbook-cli"
edition = "2021"

[[bin]]
name = "lockbook"
path = "src/main.rs"

[dependencies]
cli-rs = "0.1.12"
lb = { path = "../../libs/lb/lb-rs", package = "lb-rs" }
is-terminal = "0.4.7"
hotwatch = "0.5.0"
lb-fs = { path = "../../libs/lb-fs/" }
fs_extra = "1.3.0"
