[package]
version = "0.9.21"
name = "lockbook-cli"
edition = "2021"

[[bin]]
name = "lockbook"
path = "src/main.rs"

[dependencies]
cli-rs = "0.1.12"
lb-rs = { path = "../../libs/lb/lb-rs" }
is-terminal = "0.4.7"
hotwatch = "0.5.0"
lb-fs = { path = "../../libs/lb-fs/" }
fs_extra = "1.3.0"
tokio = { version = "1.35.1", features = ["full"] }
colored = "3.0.0"
