[package]
version = "25.12.17"
name = "lockbook"
edition = "2021"
license = "BSD-3-Clause"
description = "CLI for interacting with your lockbook.net. Use your favorite text editor to edit your notes!"
homepage = "https://lockbook.net"
readme = "../../docs/README.md"

[[bin]]
name = "lockbook"
path = "src/main.rs"

[dependencies]
cli-rs = { version = "0.2.0" }
lb-rs = { version = "25", path = "../../libs/lb/lb-rs" }
is-terminal = "0.4.7"
hotwatch = "0.5.0"
lb-fs = { version = "25", path = "../../libs/lb-fs/" }
fs_extra = "1.3.0"
tokio = { version = "1.35.1", features = ["full"] }
colored = "3.0.0"
