[package]
name = "lockbook-desktop"
version = "26.4.22"
edition = "2021"

[dependencies]
arboard = { version = "3", features = ["image", "wayland-data-control"] }
dark-light = "2.0.0"
egui = "0.32.3"
egui-winit = "0.32.3"
egui_wgpu_renderer = { path = "../../libs/content/egui_wgpu_renderer" }
env_logger = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
lbeguiapp = { package = "lockbook-egui", path = "../egui", default-features = false, features = ["egui_wgpu_renderer"] }
log = "0.4"
pollster = "0.4"
wgpu = "25"
workspace = { path = "../../libs/content/workspace" }
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", default-features = false, features = ["std", "NSApplication", "NSImage", "NSBitmapImageRep", "NSGraphics"] }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["std"] }
