[package]
name = "drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is-terminal = "0.4.7"
clap = { version = "4.1.4", features = ["derive"]}
hotwatch = "0.4.6"
lb = { path = "../../libs/core", package = "lockbook-core" }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
notify = "6.0.0"