[package]
name = "lockbook-egui"
version = "25.12.2"
edition = "2021"

[dependencies]
dark-light = "2.0.0"
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "wgpu",
], optional = true } # dependency for binary only
egui_wgpu_backend = { version = "0.30", optional = true } # dependency for library only
egui-notify = "0.15.0"
egui-winit = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image"] }
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
] }
lb = { package = "lb-rs", path = "../../libs/lb/lb-rs", default-features = false }
lb-fonts = { git = "https://github.com/lockbook/lb-fonts" }
rfd = "0.11.4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
workspace = { path = "../../libs/content/workspace" }

# features: egui_wgpu_backend (library) or eframe (binary)
[features]
default = ["eframe"]
eframe = ["dep:eframe"]
egui_wgpu_backend = ["dep:egui_wgpu_backend"]

[lib]
name = "lockbook_egui"
path = "src/lib.rs"
required-features = ["egui_wgpu_backend"]

[[bin]]
name = "lockbook-egui"
path = "src/main.rs"
required-features = ["eframe"]
