[package]
name = "lockbook-egui"
version = "25.12.17"
edition = "2021"

[dependencies]
dark-light = "2.0.0"
egui = "0.28.1"
egui_wgpu_renderer = { path = "../../libs/content/egui_wgpu_renderer", optional = true }
eframe = { version = "0.28.1", default-features = false, features = [
    "wgpu",
], optional = true } # dependency for binary only
egui-notify = "0.15.0"
egui-winit = "0.28.1" # todo possibly removable
egui_extras = { version = "0.28.1", features = ["image"] }
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
] }
lb = { package = "lb-rs", path = "../../libs/lb/lb-rs", default-features = false }
lb-fonts = { git = "https://github.com/lockbook/lb-fonts" }
rfd = "0.11.4"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
workspace = { path = "../../libs/content/workspace" }

[features]
default = ["eframe"]
eframe = ["dep:eframe"]
egui_wgpu_renderer = ["dep:egui_wgpu_renderer"]

[lib]
name = "lockbook_egui"
path = "src/lib.rs"
required-features = ["egui_wgpu_renderer"]

[[bin]]
name = "lockbook-egui"
path = "src/main.rs"
required-features = ["eframe"]
