[package]
name = "lockbook-linux"
version = "0.9.3"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
egui = "0.26.2"
egui_wgpu_backend = "0.28"
env_logger = "0.10"
image = "0.24.7"
lb = { package = "lb-rs", path = "../../libs/lb/lb-rs", default-features = false, features = [
    "native-tls",
] }
lbeditor = { package = "egui_editor", path = "../../libs/content/editor/egui_editor" }
lbeguiapp = { package = "lockbook-egui", path = "../egui" }
pollster = "0.2"
raw-window-handle = "0.6"
x11rb = { version = "0.13.0", features = [
    "all-extensions",
    "allow-unsafe-code",
    "cursor",
] }
open = "5.0.1"
percent-encoding = "2.3.1"
workspace = { path = "../../libs/content/workspace" }
