[package]
name = "lockbook-linux"
version = "25.9.23"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
egui = "0.28.1"
egui_wgpu_backend = "0.30"
env_logger = "0.10"
image = "0.24.7"
lb = { package = "lb-rs", path = "../../libs/lb/lb-rs", default-features = false }
lbeguiapp = { package = "lockbook-egui", path = "../egui", default-features = false, features = [
    "egui_wgpu_backend",
] }
pollster = "0.2"
raw-window-handle = "0.6"
x11rb = { version = "0.13.0", features = [
    "all-extensions",
    "allow-unsafe-code",
    "extra-traits",
    "cursor",
    "xkb",
] }
xkbcommon = { version = "0.8.0", features = ["x11"] }
open = "5.0.1"
percent-encoding = "2.3.1"
workspace = { path = "../../libs/content/workspace" }
