[package]
name = "lockbook-linux"
version = "25.12.18"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
egui = "0.28.1"
egui_wgpu_renderer = { path = "../../libs/content/egui_wgpu_renderer" }
env_logger = "0.10"
image = "0.24.7"
lbeguiapp = { package = "lockbook-egui", path = "../egui", default-features = false, features = [
    "egui_wgpu_renderer",
] }
pollster = "0.2"
raw-window-handle = "0.6"
x11rb = { version = "0.13.0", features = [
    "all-extensions",
    "allow-unsafe-code",
    "extra-traits",
    "cursor",
    "xkb",
] }
xkbcommon = { version = "0.8.0", features = ["x11"] }
open = "5.0.1"
percent-encoding = "2.3.1"
workspace = { path = "../../libs/content/workspace" }
