[package]
name = "lockbook-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
egui_wgpu_backend = "0.24.0"
pollster = "0.2"
lbeditor = { package = "egui_editor", path = "../../libs/editor/egui_editor" }
lbeguiapp = { package = "lockbook-egui", path = "../egui" }
lb = { package = "lockbook-core", path = "../../libs/core", default-features = false, features=["native-tls"] }
raw-window-handle = "0.5"
env_logger = "0.10"
array-init = "2.0.0"
clipboard-win = "4.5.0"

[dependencies.windows]
version = "0.51.1"
features = [   
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_HiDpi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Touch",
    "Win32_UI_Input_Pointer",
    "Win32_UI_WindowsAndMessaging"
]
