[package]
name = "lockbook-windows"
version = "25.10.25"
edition = "2021"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"
egui = "0.28.1"
egui_wgpu_backend = "0.30"
env_logger = "0.10"
image = "0.24.7"
lb = { package = "lb-rs", path = "../../libs/lb/lb-rs" }
lbeguiapp = { package = "lockbook-egui", path = "../egui", default-features = false, features = [
    "egui_wgpu_backend",
] }
pollster = "0.2"
raw-window-handle = "0.6"
workspace = { path = "../../libs/content/workspace" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory_NonVolatile",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_HiDpi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
