[package]
name = "lb-bifs"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Bi-directional file syncer for lockbook.net."
homepage = "https://lockbook.net"
repository = "https://github.com/lockbook/lockbook/"
readme = "../../docs/README.md"

[dependencies]
cli-rs = { version = "0.2.0" }
lb-rs = { version = "26", path = "../lb/lb-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
test_utils = { path = "../lb/test_utils" }
