[package]
name = "lb-fs"
version = "0.9.27"
edition = "2024"
license = "BSD-3-Clause"
description = "A Virtual file system implementation for lockbook.net."
homepage = "https://lockbook.net"
repository = "https://github.com/lockbook/lockbook/"
readme = "../../docs/README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfs3_server = "0.8"
tokio = { version = "1.35.1", features = ["signal", "process", "rt-multi-thread"] } 
cli-rs = "0.1.12"
lb-rs = { version = "0.9", path = "../lb/lb-rs" }
tracing = "0.1"
tracing-subscriber = "0.3"
