[package]
name = "lb-fs"
version = "25.10.7"
edition = "2024"
license = "BSD-3-Clause"
description = "A Virtual file system implementation for lockbook.net."
homepage = "https://lockbook.net"
repository = "https://github.com/lockbook/lockbook/"
readme = "../../docs/README.md"

[dependencies]
nfs3_server = "0.8"
tokio = { version = "1.35.1", features = ["signal", "process", "rt-multi-thread"] } 
cli-rs = { version = "0.2.0" }
lb-rs = { version = "25", path = "../lb/lb-rs" }
tracing = "0.1"
tracing-subscriber = "0.3"
