[package]
name = "lba"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.13"
lockbook-server = { path = "../server" }
tokio = { version = "1.5.0", features = ["full"] }
rust-s3 = { version = "0.27.0-rc3", default-features = false, features = ["tokio-rustls-tls"] }
lockbook-models = { path = "../../core/libs/models" }
deadpool-redis = "0.10.1"
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
redis_utils = "0.1.3"
async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
google-androidpublisher3 = "3.1.0"
hmdb = "0.1.12"
