[package]
name = "lockbook-server"
version = "0.4.1"
edition = "2018"
build = "build.rs"

[lib]
name = "lockbook_server_lib"
path = "src/lib.rs"

[[bin]]
name = "lockbook-server"
path = "src/main.rs"

[dependencies]
warp = { version = "0.3.2", features = ["tls"]}
base64 = "0.13.0"
bincode = "1.2.1"
chrono = "0.4.15"
fern = { version = "0.6.0", features = ["colored"]}
futures = "0.3.13"
lockbook-crypto = { path = "../../core/libs/crypto" }
lockbook-models = { path = "../../core/libs/models" }
log = "0.4.8"
pagerduty-rs = { version = "0.1.5", default-features = false, features = ["async", "rustls"] }
rust-s3 = { version = "0.27.0-rc3", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
shadow-rs = "0.6.2"
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
prometheus = "0.13.0"
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
deadpool-redis = "0.10.1"
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
redis_utils = "0.1.3"
async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
sha2 = "0.10.2"
google-androidpublisher3 = "3.1.0"
google-pubsub1 = "3.1.0"
constant_time_eq = "0.2.2"

[build-dependencies]
shadow-rs = "0.6.2"

[dev-dependencies]
lockbook-core = { path = "../../core" }
tokio-test = "0.4.1"
num_cpus = "1.13.0"
atomic-counter = "1.0.1"
indicatif = "0.16.0"
