[package]
name = "lockbook-server"
version = "0.8.3"
edition = "2021"
build = "build.rs"

[features]
default = ["no-network"]
no-network = ["db-rs/clone"]

[lib]
name = "lockbook_server_lib"
path = "src/lib.rs"

[[bin]]
name = "lockbook-server"
path = "src/main.rs"

[dependencies]
warp = { version = "0.3.2", features = ["tls"]}
base64 = "0.13.0"
bincode = "1.2.1"
time = "0.3.20"
futures = "0.3.13"
lockbook-shared = { path = "../../libs/lb/lb-rs/libs/shared" }
pagerduty-rs = { version = "0.1.5", default-features = false, features = ["async", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
shadow-rs = "0.21.0"
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
libsecp256k1 = "0.7.1"
prometheus = "0.13.0"
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
async-stripe = { version = "0.15.0", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
sha2 = "0.10.2"
google-androidpublisher3 = "3.1.0"
constant_time_eq = "0.2.2"
tracing = "0.1.5"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2"
itertools = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8.2.0"
x509-parser = { version = "0.15.0", features = ["verify", "validate"]}
db-rs = "0.2.1"
db-rs-derive = "0.2.1"
semver = "1.0.17"
async-trait = "0.1.68"

[build-dependencies]
shadow-rs = "0.21.0"

[dev-dependencies]
num_cpus = "1.13.0"
