[package]
name = "lockbook-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
port_scanner = "0.1.5"
dotenv = "0.15.0"
execute-command-macro = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
