[package]
name = "lockbook-dev"
version = "0.9.26"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
reqwest = { version = "0.11.11", features = ["blocking", "rustls-tls"], default-features = false }

