[package]
name = "lb-metrics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lb-metrics"
path = "src/main.rs"

[dependencies]
warp = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
prometheus = "0.13.0"
lazy_static = "1.4.0"
tracing = "0.1.5"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2"
jsonwebtoken = "8.2.0"
flate2 = "1.0"
chrono = "0.4"
