[package]
name = "releaser"
version = "0.7.1"
edition = "2021"

[dependencies]
structopt = "0.3.13"
gh_release = "0.1.1"
toml = "0.7.0"
toml_edit = "0.19.0"
sha2 = "0.10.2"
hex = "0.4.3"
zip = "0.6.2"
google-androidpublisher3 = "3.1.0"
tokio = "1.20.1"
tempfile = { version = "3.1.0" }
fs_extra = "1.2.0"
regex = "1.7.1"
